--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-libs/
-
-
-
-
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
@@ -34,6 +29,7 @@ libs/
 
 # IntelliJ
 /out/
+/libs/
 
 # mpeltonen/sbt-idea plugin
 .idea_modules/
